[package]
name = "distributed-cpu-stress-reporter"
version = "1.3.0"
edition = "2024"
description = "HTTP server that stress-tests CPU cores and reports performance metrics for measuring CPU performance in virtualized environments"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensorturtle/distributed-cpu-stress-reporter"
keywords = ["cpu", "stress-test", "benchmark", "performance", "virtualization"]
categories = ["command-line-utilities", "development-tools::profiling"]
authors = ["tensorturtle"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.16"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
